# cadkg

./: .env.example  .gitignore  COMPLETE_SYSTEM_SUMMARY.md  DOC_SWARM_SUMMARY.md  LICENSE  PIPELINE_SUCCESS_SUMMARY.md  README.md  SWARM_ARCHITECTURE.md  enrichment_results.json  pyproject.toml  sadbox.py
scripts/: chat_interface.py  grapher.py  integrated_pipeline.py  neo4j_schema.py  run_complete_pipeline.py  step_parser.py  test_multiagent.py  unified_graphrag.py
scripts/cad_module/: __init__.py  agent.py
scripts/code_module/: __init__.py  ask_question.py  code_analyzer.py  code_graph_enricher.py  code_parser.py  code_pipeline.py  code_rag.py
scripts/doc_module/: README.md  __init__.py  doc_enrichment_pipeline.py  doc_swarm_agents.py  graph_enricher.py  pdf_parser.py  simple_doc_analyzer.py  test_simple_agent.py
